--- a/Train_and _visualize.ipynb
+++ b/Train_and _visualize.ipynb
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "model = AttentionNetwork().to('cuda')\n",
-    "model.eval()\n"
+    "model.eval()\n",
     "optim = torch.optim.AdamW(params=model.parameters(), lr=2e-3, weight_decay=1.0,betas=(0.9, 0.99))\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
